[gd_scene load_steps=48 format=3 uid="uid://tmvbbkdw2g81"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_apf0w"]
[ext_resource type="Texture2D" uid="uid://dljfa6ruet88d" path="res://assets/sprites/player_swords_v3.png" id="2_vyhwu"]
[ext_resource type="AudioStream" uid="uid://bndrdsfbexyxk" path="res://assets/sounds/player/swords/trigger/t01.wav" id="3_k1ym3"]
[ext_resource type="AudioStream" uid="uid://cnvjkhergv0ch" path="res://assets/sounds/player/swords/trigger/t02.wav" id="4_a44ee"]
[ext_resource type="AudioStream" uid="uid://b0ob3eoul2gc6" path="res://assets/sounds/player/swords/trigger/t03.wav" id="5_tvr0e"]
[ext_resource type="AudioStream" uid="uid://bvkp1xmsqfp5b" path="res://assets/sounds/player/swords/trigger/t04.wav" id="6_fc1sv"]
[ext_resource type="AudioStream" uid="uid://b5pfwfcp24wfo" path="res://assets/sounds/player/swords/blow/b01.wav" id="19_3ixuv"]
[ext_resource type="AudioStream" uid="uid://miehlkdokr8y" path="res://assets/sounds/player/swords/buildup/u01.wav" id="20_lw1rh"]
[ext_resource type="AudioStream" uid="uid://dqrqxvxvpf85g" path="res://assets/sounds/player/swords/recover/r01.wav" id="20_nktfu"]
[ext_resource type="AudioStream" uid="uid://chrakoan2teyh" path="res://assets/sounds/player/swords/recover/r02.wav" id="21_er4qt"]
[ext_resource type="AudioStream" uid="uid://c1nmia34cud40" path="res://assets/sounds/player/swords/buildup/u02.wav" id="21_qpd0o"]
[ext_resource type="Texture2D" uid="uid://cmpi0xap11ciq" path="res://assets/sprites/spray.png" id="22_fx43x"]
[ext_resource type="AudioStream" uid="uid://dokbmjlhkwh3h" path="res://assets/sounds/player/swords/recover/r03.wav" id="22_lkfj7"]
[ext_resource type="Script" path="res://scripts/snz_sprite.gd" id="23_tat0y"]
[ext_resource type="AudioStream" uid="uid://c12khtxapraqt" path="res://assets/sounds/player/swords/recover/r05.wav" id="23_v7h4o"]
[ext_resource type="AudioStream" uid="uid://dxaeran3lvp0q" path="res://assets/sounds/player/swords/recover/r06.wav" id="24_gu2yc"]
[ext_resource type="AudioStream" uid="uid://d2c1nijtx5tpl" path="res://assets/sounds/player/swords/recover/r04.wav" id="25_uaw4w"]
[ext_resource type="AudioStream" uid="uid://qkotx14mcvmq" path="res://assets/sounds/player/swords/recover/r07.wav" id="26_dgwnr"]
[ext_resource type="AudioStream" uid="uid://cqllx6sbjem4p" path="res://assets/sounds/player/swords/buildup/u03.wav" id="29_2m22q"]
[ext_resource type="AudioStream" uid="uid://c3od6p3y2f5qf" path="res://assets/sounds/player/swords/buildup/u04.wav" id="30_xsoiy"]
[ext_resource type="AudioStream" uid="uid://bexg5yk7fm5pl" path="res://assets/sounds/player/swords/recover/r08.wav" id="31_aymoh"]
[ext_resource type="AudioStream" uid="uid://dvw8admvu3u32" path="res://assets/sounds/player/swords/buildup/u05.wav" id="31_s652b"]
[ext_resource type="AudioStream" uid="uid://bgw7cukyulufe" path="res://assets/sounds/player/swords/recover/r09.wav" id="32_itqea"]
[ext_resource type="Script" path="res://scripts/collision_disabled.gd" id="42_04xi6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_exri5"]
radius = 4.0
height = 22.0

[sub_resource type="Animation" id="Animation_ntlw8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rjav0"]
resource_name = "blow"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 10, 11, 10, 11, 10, 11, 10, 11]
}

[sub_resource type="Animation" id="Animation_h28q1"]
resource_name = "buildup"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_bskg4"]
resource_name = "default"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_34r21"]
resource_name = "no_snz"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_5gjw7"]
resource_name = "recover"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 9, 8, 9, 8, 9]
}

[sub_resource type="Animation" id="Animation_e85ns"]
resource_name = "resnz"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="Animation" id="Animation_a10tn"]
resource_name = "snz"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_lq8xn"]
resource_name = "snz_covered"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_ohbit"]
resource_name = "buildup_covered"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_4douj"]
resource_name = "resnz_covered"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 14, 15]
}

[sub_resource type="Animation" id="Animation_dtvu2"]
resource_name = "recover_covered"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 16, 17, 16, 17, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kojh"]
_data = {
"RESET": SubResource("Animation_ntlw8"),
"blow": SubResource("Animation_rjav0"),
"buildup": SubResource("Animation_h28q1"),
"buildup_covered": SubResource("Animation_ohbit"),
"default": SubResource("Animation_bskg4"),
"no_snz": SubResource("Animation_34r21"),
"recover": SubResource("Animation_5gjw7"),
"recover_covered": SubResource("Animation_dtvu2"),
"resnz": SubResource("Animation_e85ns"),
"resnz_covered": SubResource("Animation_4douj"),
"snz": SubResource("Animation_a10tn"),
"snz_covered": SubResource("Animation_lq8xn")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ehl6k"]
streams_count = 4
stream_0/stream = ExtResource("3_k1ym3")
stream_1/stream = ExtResource("4_a44ee")
stream_2/stream = ExtResource("5_tvr0e")
stream_3/stream = ExtResource("6_fc1sv")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_enevt"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gvufg"]
streams_count = 5
stream_0/stream = ExtResource("20_lw1rh")
stream_1/stream = ExtResource("21_qpd0o")
stream_2/stream = ExtResource("29_2m22q")
stream_3/stream = ExtResource("30_xsoiy")
stream_4/stream = ExtResource("31_s652b")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8rm8p"]
streams_count = 9
stream_0/stream = ExtResource("20_nktfu")
stream_1/stream = ExtResource("21_er4qt")
stream_2/stream = ExtResource("22_lkfj7")
stream_3/stream = ExtResource("25_uaw4w")
stream_4/stream = ExtResource("23_v7h4o")
stream_5/stream = ExtResource("24_gu2yc")
stream_6/stream = ExtResource("26_dgwnr")
stream_7/stream = ExtResource("31_aymoh")
stream_8/stream = ExtResource("32_itqea")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flsid"]
size = Vector2(39, 20)

[sub_resource type="Animation" id="Animation_3mdn6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SnzAudible/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mk3s0"]
resource_name = "spray"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.1, 0.15, 0.225, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SnzAudible/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v18vy"]
_data = {
"RESET": SubResource("Animation_3mdn6"),
"spray": SubResource("Animation_mk3s0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_y2bqb"]
radius = 104.12

[node name="Player" type="CharacterBody2D"]
z_index = 50
z_as_relative = false
script = ExtResource("1_apf0w")

[node name="SnzJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -22)
shape = SubResource("CapsuleShape2D_exri5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -21)
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -26)
texture = ExtResource("2_vyhwu")
hframes = 4
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7kojh")
}

[node name="TriggerAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ehl6k")
volume_db = 12.739

[node name="SnzAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_enevt")

[node name="CoveredSnzAudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_enevt")

[node name="BlowAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_3ixuv")

[node name="BuildupAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_gvufg")

[node name="RecoverAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_8rm8p")

[node name="AttackSnz" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSnz"]
position = Vector2(0.5, -22)
shape = SubResource("RectangleShape2D_flsid")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="AttackSnz"]
position = Vector2(0, -21)
texture = ExtResource("22_fx43x")
hframes = 2
vframes = 5
script = ExtResource("23_tat0y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackSnz"]
libraries = {
"": SubResource("AnimationLibrary_v18vy")
}

[node name="SnzAudible" type="Area2D" parent="AttackSnz"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSnz/SnzAudible"]
position = Vector2(2, -28)
shape = SubResource("CircleShape2D_y2bqb")
script = ExtResource("42_04xi6")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="trigger" from="." to="." method="_on_trigger"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="BlowAudioStreamPlayer2D" to="." method="_on_blow_audio_stream_player_2d_finished"]
